# ChangeLog for x11-misc/qterm
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/qterm/ChangeLog,v 1.39 2011/08/18 02:48:34 naota Exp $

*qterm-0.5.12 (18 Aug 2011)

  18 Aug 2011; Naohiro Aota <naota@gentoo.org> +qterm-0.5.12.ebuild,
  +files/qterm-0.5.12-qt4.patch:
  Version bump; Add patch to drop cmake 2.6.x compatible statement

  29 Jan 2011; Tomáš Chvátal <scarabeus@gentoo.org> -qterm-0.5.2-r2.ebuild,
  -files/qterm-0.5.2-abs.patch, -files/qterm-0.5.2-as-needed.patch,
  -files/qterm-0.5.2-include.patch, -qterm-0.5.7.ebuild,
  -qterm-0.5.7-r1.ebuild, -files/qterm-0.5.7-gentoo.patch, -qterm-0.5.8.ebuild,
  qterm-0.5.11.ebuild:
  Stabilise latest. Drop old. Cleanup ebuild a bit.

*qterm-0.5.11 (08 Oct 2010)

  08 Oct 2010; Alex Alexander <wired@gentoo.org> +qterm-0.5.11.ebuild,
  +files/qterm-0.5.11-gentoo.patch:
  version bump, fixes bug #338833

*qterm-0.5.8 (15 Dec 2009)

  15 Dec 2009; MATSUU Takuto <matsuu@gentoo.org> +qterm-0.5.8.ebuild:
  Version bumped. Added qt3support, bug #296507.

*qterm-0.5.7-r1 (02 Oct 2009)

  02 Oct 2009; MATSUU Takuto <matsuu@gentoo.org> +qterm-0.5.7-r1.ebuild,
  +files/qterm-0.5.7-gentoo.patch:
  Fixed desktop file, bug #287212.

*qterm-0.5.7 (22 Sep 2009)

  22 Sep 2009; Patrick Lauer <patrick@gentoo.org> +qterm-0.5.7.ebuild:
  Bump to 0.5.7

  22 Sep 2009; Patrick Lauer <patrick@gentoo.org> qterm-0.5.2-r2.ebuild,
  +files/qterm-0.5.2-include.patch:
  Fixing compile failure, thanks to Ian Whyman. Closes #276185

  20 Mar 2009; Markos Chandras <hwoarang@gentoo.org> -qterm-0.5.2.ebuild,
  -qterm-0.5.2-r1.ebuild:
  Dropping old packages due to qt-4.3 removal

  21 Jan 2009; Markus Meier <maekke@gentoo.org> qterm-0.5.2-r2.ebuild:
  x86 stable, bug #248038

*qterm-0.5.2-r2 (19 Jan 2009)

  19 Jan 2009; Ben de Groot <yngwin@gentoo.org>
  +files/qterm-0.5.2-as-needed.patch, +qterm-0.5.2-r2.ebuild:
  Fix Qt dep for bug 248038 and in the process fix bug 225117 by applying