@@ -1,18 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX qterm-0.5.11-gentoo.patch 352 RMD160 d3f6baea6a6d0ef94d61c1469342526f6fbee1ca SHA1 461b53084091f3f5f09a6c70758cd4d802b8f9a7 SHA256 e1f67ff3f067f122b525653d1b9a95bdc5ab2253c0eb3fe56d0142a2c27c1851
 AUX qterm-0.5.12-qt4.patch 404 RMD160 e5db59d6aae2e3b046e80533074742cc5d5aa07f SHA1 b51ebd8ae69c95e97e024dc671cac37c1f371e0d SHA256 a3964f38c5e0a8c86bf2487245badb64f11a700b8a83bff5d43bdc5dea0b9cd1
 DIST qterm-0.5.11.tar.bz2 700771 RMD160 2ef495c84703e5bb8242970a1d0185e7d311dc3d SHA1 cb04bf66a773b4b574996448bd2dc0adc29b4274 SHA256 16b2d3438fba83ec3c8ccbce70fd9dca4c54727065a72d17afe6c0c9528b0300
 DIST qterm-0.5.12.tar.bz2 749254 RMD160 799049eb3064ee1b61d94d0c99842d22b8c72cad SHA1 aec88b0468e0efe7022ef57efbe2d1168e3c2db5 SHA256 bd31051a6c117b05fef3ea163480143837c57632a84eab43e8e142860bcab22a
 EBUILD qterm-0.5.11.ebuild 705 RMD160 bd9f1ee3107a8a522d2f1ce36e7f6b55ca5c664f SHA1 2ba7aff2cab1b5e9fd25ea143ef5714bde3eeb0f SHA256 aa8ca43f0d3451009a03af3eaced617522e2d77591c8153253507d78d3db2ccd
-EBUILD qterm-0.5.12.ebuild 737 RMD160 372d2bedeeef81a0a5e3a9eb965a428db7c50657 SHA1 a927bf04591a5336850a4ec3fc96be0fb884196d SHA256 c0398768a9697315821165c40314ae900fc622f853aded08548a410d35066338
-MISC ChangeLog 6151 RMD160 987e2ee8af5353af3337f9122b9bf70a73cb0557 SHA1 e2082f13340e6e016b227a23e463980ea94c4dbf SHA256 dbbea8bd5c72a2bfb068a57aecc057cfae1a2ade37bcdb5cf0f6a632d9af305a
+EBUILD qterm-0.5.12.ebuild 798 RMD160 6a52a18aec3df100ce8a18bda1bb2ce1dc3eed08 SHA1 c4b4f7a458d26dbcfcaa03ac1b954b7086ff6e1f SHA256 0e230d5648f411a44b6dd2227e4f52f1c7a47512c65fd78513870ff03f287dec
+MISC ChangeLog 6304 RMD160 f401bd29e5cd6ecb30d96da02fbf7a5d13110ebd SHA1 6831ed39e1ea379bdae4d07798b166b9c8f9b335 SHA256 42fe3258e4b448f9e3844fc7e54dfe52b2b33de76314722da23ffce503a9e856
 MISC metadata.xml 156 RMD160 8adcf0a760a605cd42501f53097ca3a1c4e8daad SHA1 8ccc2b0f20743002b783b1f7b5162c71f7f54c2e SHA256 815820f2e5866d973fafb29a8b8027d022ccea43023309b6dc294cf077598215
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk5MfXgACgkQGpDnPLSHuMCb2ACg0LcoauYNMJVZnmbfq1Ohz62U
-7gAAoLIisDvHJOn16+gIV35HSsrHcCXJ
-=Yi1r
+iQIcBAEBCAAGBQJPYBPmAAoJEDYO1FT4VRUU3/wP/2R1W7jzj6VkrL/fpN0tmHdX
+fGQssDWos6DY3TJLYj1DF+MtuLYD61jM8GRNrKJUbZ5odjXH6B/fIzAzBgMEn3Sy
+0pYA0QR1qjxIcigoLEXibK0KClTbZ9egiNKoDUyPcXloBO92sZAGmGxOHJ6FaVSi
+vrPuL68vhvBb12muJiPoaEvPDiSPC19J+NQoIazWmNC0wbylqeH4yFQoragDv4FZ
+0QYyVxXjNshqJcsLll1g2hf7uivubf3gkEb4DSi915DoupidqIt1gLhRYyJSZfyW
+7e7TX/n/OgrwQwn54QWa2ScoZNDNxuqwiU4Uu31U+Tmw0SuXNOdzbzoryO8jerRs
+8Z6z8eNq/VWeL4vW0rxrNX2dVOd8KZbG5g6yYRnYpvSgsOlK8I5Bvx7cr2nZPhcW
+QsS0bnLrR/w4baJ4iLtyoY+2ilq41g9fm5a7XUNxDqzwieGtFYB1vecKG4IjOiI7
+54GFOZ8rCnAMnsvqFuSf26gr98tSoIhFAbCj43GJcp9x2LNnDpiZDDz+FXX+VkGt
+YP6LP8kMo/SfrFNbY36JNlOqYBnO7xbHrXTCwMzr2eKPsCm7K6zAnsMn77l6eef7
+d/7/9brrt3Tg+FWgwf0Nlmp34OTxseEY7INxG2ZAm+0eTDPQwBYmm6+SmYk2Xjm/
+HFWI+MH8MAT1BIV2U9Vl
+=Mnau
 -----END PGP SIGNATURE-----
