@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/qterm/qterm-0.5.12.ebuild,v 1.1 2011/08/18 02:48:34 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/qterm/qterm-0.5.12.ebuild,v 1.2 2012/03/14 03:43:44 naota Exp $
 
 EAPI=3
 inherit cmake-utils eutils
@@ -16,7 +16,10 @@ IUSE=""
 
 RDEPEND=">=x11-libs/qt-gui-4.5:4[qt3support]
 	dev-libs/openssl"
-DEPEND="${RDEPEND}"
+DEPEND="${RDEPEND}
+	kde-base/kdelibs
+	x11-libs/qt-assistant
+	x11-libs/qt-webkit"
 
 src_prepare() {
 	epatch "${FILESDIR}"/"${PN}"-0.5.11-gentoo.patch \
